--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -44,31 +44,41 @@ h1 {
 }
 
 form {
-  width: 100%;
-  max-width: 40rem;
-  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  width: 20vw;
+  align-items: center;
   margin: 2rem 0;
-  background-color: #fff;
-  border-radius: 0.5rem;
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+}
+
+input[type="text"], input[type="submit"] {
+  margin: 1rem 0;
+  padding: 1rem;
+  width: 100%;
+  font-size: 1.6rem;
+}
+
+input[type="submit"] {
+  background-color: #333;
+  color: #fff;
+  cursor: pointer;
 }
 
 table {
-  width: 100%;
+  width: 20vw;
   border-collapse: collapse;
   margin: 2rem 0;
 }
 
 th, td {
+  border: 1px solid #333;
   padding: 1rem;
-  text-align: left;
-  border-bottom: 1px solid #ddd;
+  text-align: center;
 }
 
-th {
-  background-color: #f4f4f4;
+span {
+  font-size: 1.6rem;
+  margin: 1rem 0;
+  color: chocolate;
 }
 
-th:first-child, td:first-child {
-  width: 40%;
-}
