--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -76,9 +76,14 @@ th, td {
   text-align: center;
 }
 
-span {
+h3 {
   font-size: 1.6rem;
   margin: 1rem 0;
   color: chocolate;
+}
+
+span {
+  font-weight: bold;
+  color: rgba(28, 15, 224, 0.6);
 }
 
