--- a/app/views/home/search.html.erb
+++ b/app/views/home/search.html.erb
@@ -1,10 +1,9 @@
 <div class="container">
-  <h1>Forecast for the destinations available in Reservamos</h1>
-  <span><%= @city_name %></span>
+  <h1>Forecast for the destinations available in <span>Reservamos</span></h1>
+  <h3><%= @city_name %></h3>
 
   <%= form_with url: "/search", method: :get do |form| %>
     <%= form.label :query, "Search city by name:" %>
-    <br>
     <%= form.text_field :query %>
     <%= form.submit "Search" %>
   <% end %>
